plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	// On-demand CVE scan of dependencies. Run with: ./gradlew dependencyCheckAnalyze
	// Reports written to build/reports/dependency-check-report.html. Set NVD_API_KEY to
	// avoid NVD rate-limiting on the first run (request one at https://nvd.nist.gov/developers/request-an-api-key).
	id 'org.owasp.dependencycheck' version '12.1.0'
}

group = 'com.pjr22'
version = '0.0.1-SNAPSHOT'
description = 'Trip Weather application for forcasting weather along a driven route'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

// Versions for dependencies not managed by the Spring Boot BOM.
// Spring-Boot-managed deps below stay version-less on purpose; add new non-BOM versions here.
ext {
	bucket4jVersion = '8.14.0'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	// Prometheus exposition format — single-page text view of every metric
	// at /actuator/prometheus. Self-contained: no Prometheus server needed,
	// the endpoint is just plain-text formatted output a browser can render.
	implementation 'io.micrometer:micrometer-registry-prometheus'
	implementation 'com.github.ben-manes.caffeine:caffeine'
	implementation 'org.postgresql:postgresql'
	implementation 'org.hibernate.orm:hibernate-spatial'
	implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	implementation "com.bucket4j:bucket4j_jdk17-core:${bucket4jVersion}"
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

   compileOnly 'org.projectlombok:lombok'
   annotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
}

// === Build version generation ===
//
// Two tasks cooperate to produce src/main/resources/static/version.txt
// (served at /version.txt for the About dialog):
//
//   bumpVersion       — increments NN on the same day, resets to 01 on a new
//                       day. State lives in version.properties (gitignored).
//                       Hooked only to bootJar so dev iteration via bootRun
//                       doesn't churn the counter.
//   writeVersionFile  — writes version.txt from the current state. Hooked to
//                       processResources so the file always exists for any
//                       run that copies resources (bootRun, build, test).
//                       Seeds version.properties with today/01 on a fresh
//                       checkout if it's missing.
import java.text.SimpleDateFormat

tasks.register('bumpVersion') {
	description = 'Bumps the build counter (YY.MM.DD.NN) — increments NN on the same day, resets to 01 on a new day.'
	group = 'build'

	doLast {
		def stateFile = file("$projectDir/version.properties")
		def props = new Properties()
		if (stateFile.exists()) {
			stateFile.withInputStream { props.load(it) }
		}
		def today = new SimpleDateFormat('yy.MM.dd').format(new Date())
		def storedDate = props.getProperty('date')
		def storedBuild = props.getProperty('build')

		def newBuild = (storedDate == today && storedBuild)
				? String.format('%02d', storedBuild.toInteger() + 1)
				: '01'

		props.setProperty('date', today)
		props.setProperty('build', newBuild)
		stateFile.withOutputStream {
			props.store(it, 'Build version state — auto-generated, gitignored')
		}
		println "Build version bumped to ${today}.${newBuild}"
	}
}

tasks.register('writeVersionFile') {
	description = 'Writes static/version.txt from version.properties. Initialises the properties file on a fresh checkout.'
	group = 'build'

	doLast {
		def stateFile = file("$projectDir/version.properties")
		def outputFile = file("$projectDir/src/main/resources/static/version.txt")

		def props = new Properties()
		if (stateFile.exists()) {
			stateFile.withInputStream { props.load(it) }
		} else {
			def today = new SimpleDateFormat('yy.MM.dd').format(new Date())
			props.setProperty('date', today)
			props.setProperty('build', '01')
			stateFile.withOutputStream {
				props.store(it, 'Build version state — auto-generated, gitignored')
			}
		}

		outputFile.parentFile.mkdirs()
		outputFile.text = "${props.getProperty('date')}.${props.getProperty('build')}"
	}
}

tasks.named('processResources') {
	dependsOn 'writeVersionFile'
}

tasks.named('bootJar') {
	dependsOn 'bumpVersion'
}

tasks.named('writeVersionFile') {
	mustRunAfter 'bumpVersion'
}
